# pandantic

./: .gitignore  404.html  LICENSE  Pipfile  README.md  dev-requirements.txt  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: python-app.yml
docs/: index.md
pandantic/: columns.py  datatype_validators.py  evaluations.py  root_validator.py  schemas.py  shortcuts.py  validations.py  validators.py
pandantic/tests/test_columns/: test_bool_column.py  test_category_column.py  test_column_validations.py  test_datetime_column.py  test_float_column.py  test_int_column.py  test_number_column.py  test_object_column.py  test_string_column.py
pandantic/tests/test_schema/: test_schema.py
pandantic/tests/test_validators/: test_categories_validator.py  test_datatype_validators.py  test_non_null_validator.py  test_pattern_validator.py  test_shortcuts.py  (+4 more)
search/: search_index.json
src/: columns.py  schemas.py  shortcuts.py  validators.py  validators_shortcuts.py
tests/: test_bool_column.py  test_category_column.py  test_datetime_column.py  test_object.py
tests/test_columns/: test_bool_column.py  test_category_column.py  test_column_validations.py  test_datetime_column.py  test_float_column.py  test_int_column.py  test_number_column.py  test_object_column.py  test_string_column.py
tests/test_schema/: test_schema.py
tests/test_validators/: test_categories_validator.py  test_non_null_validator.py  test_pattern_validator.py  test_range_validator.py  test_shortcuts.py  test_unique_validator.py  test_validator_amend.py
