[tool.poetry]
name = "pandantic"
version = "0.1.0"
description = "DataFrame parsing and validation"
authors = ["Alexis Villanueva (emqaclh) <villanueva.alexis17@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.3"
numpy = "^1.23.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
pre-commit = "^2.20.0"
pytest-cov = "^3.0.0"
mkdocs = "^1.3.1"
mkdocs-bootswatch = "^1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
